# endoreg-client-manager

./: .gitignore  README.md  flake copy.nix  flake.nix  pyproject.toml
endoreg_client_manager/: binary_predictions.json  celery_signals.log.1  celery_signals.log.2  celery_signals.log.3  filtered_sequences.json  manage.py  raw_sequences.json
endoreg_client_manager/agl_monitor_app/: apps.py
endoreg_client_manager/agl_monitor_app/tasks/: __init__.py  alive_log.py
endoreg_client_manager/case_merger/: apps.py
endoreg_client_manager/case_merger/tests/: test_apps.py
endoreg_client_manager/content_management/: apps.py  middleware.py  models.py  tasks.py  urls.py  utils.py  views.py
endoreg_client_manager/content_management/templates/: _.tmp  base.html  help.html  landing_page.html
endoreg_client_manager/content_management/tests/: test_apps.py  test_middleware.py  test_tasks.py  test_views.py
endoreg_client_manager/data_collector/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
endoreg_client_manager/data_collector/migrations/: 0001_initial.py  0002_schedule_move_files_task.py
endoreg_client_manager/data_collector/tasks/: __init__.py  common.py  hdd.py  image_anonymize.py  pdf_all_process.py  pdf_examination_move.py  pdf_histology_move.py  pdf_move.py  tasks.py  video_move.py  video_process.py
endoreg_client_manager/data_collector/tests/: test_apps.py
endoreg_client_manager/data_validation/: apps.py
endoreg_client_manager/endoreg_client_manager/: __init__.py  asgi.py  celery.py  urls.py  views.py  wsgi.py
endoreg_client_manager/endoreg_client_manager/endoreg_client_manager/: apps.py
endoreg_client_manager/examples/: apply_ai.py  move_examination_files.py  readme.md  report_reader_config.py
endoreg_client_manager/report_processor/: apps.py
endoreg_client_manager/video_processor/: apps.py
(+28 files in other folders)
