[tool.poetry]
name = "endoreg-client-manager"
version = "0.1.0"
description = "Django application to interact with EndoReg services on clients."
authors = ["Thomas J. Lux"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~4.2"
djangorestframework = "^3.14.0"
django-bootstrap5 = "^23.4"
ffmpeg = "^1.4"
celery = {extras = ["redis"], version = "^5.3.6"}
django-celery-beat = "^2.5.0"
flower = "^2.0.1"
gunicorn = "^21.2.0"
django-admin-interface = "^0.28.5"
django-flat-responsive = "^2.0"
django-flat-theme = "^1.1.4"
djlint = "^1.34.1"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
pytesseract = "^0.3.10"
django-celery-results = "^2.5.1"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
pytorch-lightning = "^2.2.1"
torch = "^2.2.1"
agl-frame-extractor = "^0.2.0"
endoreg-db = "^0.3.0"
agl-predict-endo-frame = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
